# Seddit

./: .gitignore  Extractor.py  README.md  curr_dir.txt  docker-compose.yml  firebase-credentials.json  rbac.sh  run.sh  setup-frontend.sh
.specstory/history/: 2025-12-02_07-20Z-explaining-alembic-configuration-flow-in-python.md  (+1 more)
backend/: .env.example  Dockerfile  addfile.sh  curr_dir.txt  main.py  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20251130_allow_long_image_url.py  382b9ef7d182_initial_schema.py  a8007ce4c758_add_rbac_fields.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  comments.py  posts.py  users.py  websocket.py
backend/app/core/: firebase_auth.py  permissions.py  redis_client.py  security.py
backend/app/middleware/: logging.py  rate_limit.py
backend/app/models/: comment.py  notification.py  post.py  role.py  user.py
backend/app/repositories/: comment_repository.py  post_repository.py  user_repository.py
backend/app/schemas/: __init__.py  admin.py  auth.py  comment.py  notification.py  post.py  user.py
backend/app/services/: admin_service.py  auth_service.py  comment_service.py  notification_service.py  notification_stream.py  post_service.py  websocket_service.py
backend/app/utils/: logger.py
db/: curr_dir.txt  docker-compose.yml
frontend/: .dockerignore  Dockerfile  curr_dir.txt  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  (+2 more)
redis-cache/: curr_dir.txt  docker-compose.yml  redis.conf
(+100 files in other folders)
